--- a/src/components/templates/index/latest/latest.module.css
+++ b/src/components/templates/index/latest/latest.module.css
@@ -30,7 +30,17 @@
   align-items: center;
   gap: 9px;
   white-space: nowrap; /* جلوگیری از شکستن متن لینک */
+  text-decoration: none;
+  color: white;
+  padding: 8px 16px;
+  background: rgba(165, 159, 159, 0.7);
+  backdrop-filter: blur(5px);
+  border-radius: 50px; /* حالت کپسولی */
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  font-size: 0.9rem;
+  transition: all 0.3s ease;
 }
+
 
 .products {
   display: grid;
@@ -104,9 +114,6 @@
     justify-content: space-between;
     flex-flow: row;
     flex-direction: row-reverse;
-  }
-  .container{
-   
   }
  
 }
