--- a/src/components/templates/index/articles/articles.module.css
+++ b/src/components/templates/index/articles/articles.module.css
@@ -13,9 +13,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #3b3939 ;
+  background-color: #1a1a1a  ;
   border-radius: 50%;
-  box-shadow: #837d7d 2px 2px 2px 2px;
+  box-shadow: #696666 0px 2px 20px 10px;
   font-size: 2rem;
   font-weight: bold;
   color: #fff; /* رنگ قهوه‌ای تیره */
