--- a/src/components/modules/product/product.module.css
+++ b/src/components/modules/product/product.module.css
@@ -75,22 +75,24 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease;
   position: relative;
+  color: #010101;
+
 }
 
 .icons a:hover, .icons div:hover {
   background-color: rgba(255, 255, 255, 0.8);
   transform: scale(1.1);
-  color: var(--accent-color);
+ 
 }
 
 .tooltip {
   position: absolute;
   right: calc(100% + 10px);
   white-space: nowrap;
-  background-color: var(--text-primary);
-  color: white;
+  background-color: #010101;
+  color:#fff;
   padding: 5px 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 0.8rem;
   opacity: 0;
   visibility: hidden;
@@ -124,10 +126,14 @@
   -webkit-backdrop-filter: blur(10px);
   border-top: 1px solid rgba(255, 255, 255, 0.6);
   color: var(--text-primary);
+  border-radius: 10px;
+  color: #010101;
+
+
 }
 
 .details_container button:hover {
-  color: var(--accent-color);
+  color: #010101;
 }
 
 .card:hover .details_container button {
