--- a/src/components/templates/index/articles/articles.module.css
+++ b/src/components/templates/index/articles/articles.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: center;
   background-color: #1a1a1a  ;
-  border-radius: 50%;
+  border-radius: 20px;
   box-shadow: #696666 0px 2px 20px 10px;
   font-size: 2rem;
   font-weight: bold;
