--- a/src/components/templates/index/promote/promote.module.css
+++ b/src/components/templates/index/promote/promote.module.css
@@ -60,18 +60,18 @@ margin: 0 auto;
 .main section > img { /* The image inside the first section */
   position: absolute;
   left: 20px;
-  bottom: -20px;
   width: 150px;
   height: auto;
   opacity: 0.8;
   transition: transform 0.3s ease;
+  border-radius: 10%;
 }
 .main section:hover > img {
   transform: scale(1.1);
 }
 
 .club {
-  background: linear-gradient(135deg, #34495e, #2c3e50);
+  background: linear-gradient(135deg, #010101, #3d2b17);
   color: white;
   text-align: center;
 }
@@ -102,11 +102,7 @@ margin: 0 auto;
   align-items: flex-start; /* Align content to the start (right) */
 }
 
-.why_coffee .logo {
-  width: 60px;
-  height: auto;
-  margin-bottom: 1.5rem;
-}
+
 
 .why_coffee .title {
   font-size: 2.5rem;
@@ -129,7 +125,7 @@ margin: 0 auto;
 
 .why_coffee button {
   padding: 0.8rem 2rem;
-  border-radius: 8px;
+  border-radius: 20px;
   border: 1px solid var(--primary-text);
   background-color: var(--primary-text);
   color: white;
@@ -140,16 +136,16 @@ margin: 0 auto;
 }
 
 .why_coffee button:hover {
-  background-color: #1e2b38;
+  background-color: #010101;
   transform: translateY(-2px);
 }
 
-.why_coffee .red_btn {
-  background-color: #1e2b38;
+.why_coffee .btn {
+  background-color: #010101;
   border-color: var(--accent-color);
 }
-.why_coffee .red_btn:hover {
-  background-color: #a5281b;
+.why_coffee .btn:hover {
+  background-color: #3d2b17;
 }
 
 
