--- a/src/components/modules/navbar/Navbar.module.css
+++ b/src/components/modules/navbar/Navbar.module.css
@@ -117,15 +117,16 @@
 
 @media (max-width: 992px) {
   .hamburger_icon { display: block; }
-  .m_icon { display: inline-block; font-size: 1.1rem; color: #d4a373; }
+  .m_icon { display: inline-block; font-size: 1.1rem; color: #9e764e; }
 
   .links {
     position: fixed;
-    top: 0;
+    top: -15px;
     right: -105%;
     width: 300px;
-    height: 100vh;
+    height: 50vh;
     background: #fff;
+    border-radius: 20px;
     flex-direction: column;
     padding: 30px;
     transition: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
@@ -140,7 +141,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 40px;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 1px solid #9e764e;
     padding-bottom: 20px;
   }
 
@@ -188,8 +189,8 @@
     margin-top: auto;
     text-align: center;
     font-size: 0.8rem;
-    color: #aaa;
-    border-top: 1px solid #f5f5f5;
+    color: #222222;
+    border-top: 1px solid #9e764e;
     padding-top: 20px;
   }
 
